--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cometd",
-  "version": "0.5.3",
+  "version": "1.0.0",
   "description": "A lightweight cometD Library with lightweight dependencies. No jQuery needed!",
   "main": "cometD.js",
   "scripts": {
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/Citrullin/cometd/issues"
   },
+  "dependencies": {
+    "request": "2.72.0",
+    "zlib": "1.0.5"
+   },
   "homepage": "https://github.com/Citrullin/cometd#readme"
 }
