--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cometd",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A lightweight cometD Library with lightweight dependencies. No jQuery needed!",
   "main": "cometD.js",
   "scripts": {
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "request": "2.72.0",
-    "zlib": "1.0.5"
+    "zlib": ">1.0.0"
    },
   "homepage": "https://github.com/Citrullin/cometd#readme"
 }
